--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-rev": "^8.1.1",
